# fastapi_todo

./: .gitignore  4.py  alembic.ini  pyproject.toml  tasks1.db
src/: main.py
src/api/: dependencies.py  routers.py  tasks.py  users.py
src/db/: db.py
src/miragtions/: env.py
src/miragtions/versions/: fa462b2193f6_create_table.py
src/models/: task_model.py  user_model.py
src/repositories/: task_repository.py  user_repository.py
src/schemas/: task_schema.py  user_schema.py
src/services/: task_service.py  user_service.py
src/utils/: repository.py
