[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Alex"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
aiosqlite3 = "^0.3.0"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
alembic = "^1.13.1"
mypy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
